feat: spring core翻译至1.9.5

--- a/docs/01.文档翻译/01.Spring Framework/01.core.md
+++ b/docs/01.文档翻译/01.Spring Framework/01.core.md
@@ -2701,23 +2701,279 @@ public class MovieRecommender {
 
 ### 1.9.4.  使用@Qualifiers调整基于注解的自动注入
 
+当按类型注入的方式可以确定一个主候选者时，使用`@Primary`是很有效的方式。当你需要控制更多选择过程时，可以使用`@Qualifier`注解。你可以将限定符与特定参数相关联，缩小类型匹配的集合，以便为每个参数选择特定bean。在最简单的情况下，这可以是普通的描述性值，如下例所示：
+
+```java
+public class MovieRecommender {
+
+    @Autowired
+    @Qualifier("main")
+    private MovieCatalog movieCatalog;
+
+    // ...
+}
+```
+
+你也单独地在构造函数参数或方法参数上指定`@Qualifier`注解，如下图所示：
+
+```java
+public class MovieRecommender {
+
+    private MovieCatalog movieCatalog;
+
+    private CustomerPreferenceDao customerPreferenceDao;
+
+    @Autowired
+    public void prepare(@Qualifier("main") MovieCatalog movieCatalog,
+            CustomerPreferenceDao customerPreferenceDao) {
+        this.movieCatalog = movieCatalog;
+        this.customerPreferenceDao = customerPreferenceDao;
+    }
+
+    // ...
+}
+```
+
+以下示例显示了相应的bean定义:
+
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<beans xmlns="http://www.springframework.org/schema/beans"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xmlns:context="http://www.springframework.org/schema/context"
+    xsi:schemaLocation="http://www.springframework.org/schema/beans
+        https://www.springframework.org/schema/beans/spring-beans.xsd
+        http://www.springframework.org/schema/context
+        https://www.springframework.org/schema/context/spring-context.xsd">
+
+    <context:annotation-config/>
+
+    <bean class="example.SimpleMovieCatalog">
+        <qualifier value="main"/> 
+
+        <!-- inject any dependencies required by this bean -->
+    </bean>
+
+    <bean class="example.SimpleMovieCatalog">
+        <qualifier value="action"/> 
+
+        <!-- inject any dependencies required by this bean -->
+    </bean>
+
+    <bean id="movieRecommender" class="example.MovieRecommender"/>
+
+</beans>
+```
+
+对于匹配方式，bean名称是默认的限定符值。因此，你可以定义一个id为main的bean代替嵌套的限定元素。然而，虽然您可以使用此约定按名称引用特定bean，但`@Autowired`根本上是可选语义限定符的按类型注入。这意味着限定符的值，甚至是bean的name，始终在类型匹配中缩小语义。它们没有语义表达对唯一bean id的引用。好的限定符值是main、EMEA或persistent，表达与bean id无关的特定组件的特征。
+
+限定符也适用于集合，如`Set\<MovieCatalog\>`，在这种情况下，根据声明的限定符，所有匹配的bean都被注入集合。这意味着限定符不必是独一无二的。相反，它们是筛选的条件。例如，你可以定义具有相同限定符值“action”的多个\<MovieCatalog\>bean，所有这些bean都将注入到用`@Qualifier("action")`标注中的`Set\<MovieCatalog\>`中。
+
+> :bulb:让限定符值在类型匹配的候选内选择针对目标bean名称，在注入点处不需要@Qqualifier注解。如果没有其他指示符（例如qualifier 或primary ），则对于非唯一依赖情况，Spring将注入点名称（即字段名称或参数名称）与目标bean名称匹配并选择同样的候选人，如果有的话。
+
+也就是说，如果你打算使用按名称注入的注解，不建议使用`@Autowired`，而使用JSR-250规范的`@Resource`注解，它在语义上的定义就是标识一个特定名称的组件，且声明的类型与匹配过程无关。`@Autowired`却有不同的语义：选择类型匹配的候选bean后，仅在这些候选者中考虑指定的字符串限定符（例如，将“account”限定符与标有相同限定符标签标记的bean匹配）。
+
+对于定义为集合，Map或者数组类型的bean，`@Resource`能通过唯一名称引用特定的集合或数组bean。也就是说截止4.3，集合，你可以通过Spring的@Autowired类型匹配算法匹配Map和数组类型，只要在@Bean返回类型签名或集合继承层次结构中保留了元素类型信息（*PS:这里翻译可能有误*）。在这种情况下，你可以使用限定符来选择相同类型的集合，如前一段所述。
+
+截至4.3，@Autowired也考虑自我注入（即，回到当前注入的bean的引用）。注意自注入是一个回调。对其他组件的常规依赖总是优先的。从这种意义上讲，自我引用不参加常规候选选择，因此不是最主要的。相反，它们总是低优先级最低的。在实践中，你应该仅使用自我引用作为最后的措施（例如，要通过Bean的事务代理调用相同实例的其他方法）。考虑在这种情况下将受影响的方法进行分解给单独的委派bean。或者，您可以使用@Resource，其可以通过其唯一名称获取代理返回当前bean。（PS:不太理解这一段的意思，可能翻译有误）
+
+> :information_source:尝试在同一配置类上注入来自@Bean方法的结果，也是有效的自引用参考场景。解析实际需要的方法签名中的此类引用（而不是配置类中的自动注入字段），或者将受影响的@Bean方法声明为静态的，从包含的配置类实例和其生命周期解耦它们。否则，此类bean仅在回调阶段中考虑在其他配置类上选择其中匹配的bean为主候选对象（如果可用）（PS：不太理解这一段的意思，可能翻译有误）。
+
+@Autowired适用于字段，构造函数和多参数方法，允许通过参数级别的限定符注解缩小选择范围。相比之下，@Resource仅支持具有单个参数的字段和bean属性setter方法。因此，如果注入目标是构造函数或多参数方法，则应使用限定符。
+
+您可以创建自己的自定义限定符注解。为此，定义注解并在定义中提供@Qualifier注解，如以下示例显示：
+
+```java
+@Target({ElementType.FIELD, ElementType.PARAMETER})
+@Retention(RetentionPolicy.RUNTIME)
+@Qualifier
+public @interface Genre {
+
+    String value();
+}
+```
+
+然后，您可以在自动注入字段和参数上提供自定义限定符，如以下示例显示：
+
+```java
+public class MovieRecommender {
+
+    @Autowired
+    @Genre("Action")
+    private MovieCatalog actionCatalog;
+
+    private MovieCatalog comedyCatalog;
+
+    @Autowired
+    public void setComedyCatalog(@Genre("Comedy") MovieCatalog comedyCatalog) {
+        this.comedyCatalog = comedyCatalog;
+    }
+
+    // ...
+}
+```
+
+接下来，您可以提供候选bean定义的信息。您可以将\<qualifier/\>标记添加为\<bean /\>标记的子元素，然后指定要匹配自定义限定符注释的类型和值。该类型与注解的完全限定类名匹配。或者，如果没有相互冲突的名称的风险，则可以使用短类名称。以下示例演示了两种方法：
+
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<beans xmlns="http://www.springframework.org/schema/beans"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xmlns:context="http://www.springframework.org/schema/context"
+    xsi:schemaLocation="http://www.springframework.org/schema/beans
+        https://www.springframework.org/schema/beans/spring-beans.xsd
+        http://www.springframework.org/schema/context
+        https://www.springframework.org/schema/context/spring-context.xsd">
+
+    <context:annotation-config/>
+
+    <bean class="example.SimpleMovieCatalog">
+        <qualifier type="Genre" value="Action"/>
+        <!-- inject any dependencies required by this bean -->
+    </bean>
+
+    <bean class="example.SimpleMovieCatalog">
+        <qualifier type="example.Genre" value="Comedy"/>
+        <!-- inject any dependencies required by this bean -->
+    </bean>
+
+    <bean id="movieRecommender" class="example.MovieRecommender"/>
+
+</beans>
+```
+
+在[ClassPath扫描和托管组件](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#beans-classpath-scanning)中，您可以看到基于注解的替代方案。具体请参阅[使用注解提供限定符元数据](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#beans-scanning-qualifiers)。
+
+在某些情况下，使用没有值的注解可能就足够了。当注解服务更通用的目的时，这可以是有用的，并且可以跨多种不同类型的依赖性应用。例如，您可以提供可以在没有可用的Internet连接时搜索的脱机目录。首先，定义简单的注释，如以下示例所示：
+
+```java
+@Target({ElementType.FIELD, ElementType.PARAMETER})
+@Retention(RetentionPolicy.RUNTIME)
+@Qualifier
+public @interface Offline {
+
+}
+```
+
+然后将注解添加到字段或属性上，如下例所示
+
+```java
+public class MovieRecommender {
+
+    @Autowired
+    @Offline 
+    private MovieCatalog offlineCatalog;
+
+    // ...
+}
+```
+
+现在Bean定义只需要一个限定符类型，如下例所示
+
+```xml
+<bean class="example.SimpleMovieCatalog">
+    <qualifier type="Offline"/> 
+    <!-- inject any dependencies required by this bean -->
+</bean>
+```
 
 
 
+您还可以定义接受命名属性的自定义限定符注解替代简单的值属性。如果在字段或参数上指定了多个属性值，则bean定义必须与所有此类属性值匹配才被视为自动注入的候选者。例如，参考以下注解定义：
+
+```java
+@Target({ElementType.FIELD, ElementType.PARAMETER})
+@Retention(RetentionPolicy.RUNTIME)
+@Qualifier
+public @interface MovieQualifier {
+
+    String genre();
+
+    Format format();
+}
+```
+
+在这种情况下，Format是一个枚举，如下所示：
+
+```java
+public enum Format {
+    VHS, DVD, BLURAY
+}
+```
+
+要自动注入的字段是用自定义限定符注注解标注的，并且包括两个属性的值：genre和format，如下例所示：
+
+```java
+public class MovieRecommender {
+
+    @Autowired
+    @MovieQualifier(format=Format.VHS, genre="Action")
+    private MovieCatalog actionVhsCatalog;
+
+    @Autowired
+    @MovieQualifier(format=Format.VHS, genre="Comedy")
+    private MovieCatalog comedyVhsCatalog;
+
+    @Autowired
+    @MovieQualifier(format=Format.DVD, genre="Action")
+    private MovieCatalog actionDvdCatalog;
+
+    @Autowired
+    @MovieQualifier(format=Format.BLURAY, genre="Comedy")
+    private MovieCatalog comedyBluRayCatalog;
+
+    // ...
+}
+```
+
+最后，Bean定义应包含匹配的限定符值。此示例还演示了您可以使用bean meta属性而不是\<qualifier/\>元素。如果可用，则\<qualifier/\>元素及其属性优先，但自动控制机制如果在以下示例中没有存在此类限定符，则返回到\<meta /\>标记中提供的值：
+
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<beans xmlns="http://www.springframework.org/schema/beans"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xmlns:context="http://www.springframework.org/schema/context"
+    xsi:schemaLocation="http://www.springframework.org/schema/beans
+        https://www.springframework.org/schema/beans/spring-beans.xsd
+        http://www.springframework.org/schema/context
+        https://www.springframework.org/schema/context/spring-context.xsd">
+
+    <context:annotation-config/>
+
+    <bean class="example.SimpleMovieCatalog">
+        <qualifier type="MovieQualifier">
+            <attribute key="format" value="VHS"/>
+            <attribute key="genre" value="Action"/>
+        </qualifier>
+        <!-- inject any dependencies required by this bean -->
+    </bean>
+
+    <bean class="example.SimpleMovieCatalog">
+        <qualifier type="MovieQualifier">
+            <attribute key="format" value="VHS"/>
+            <attribute key="genre" value="Comedy"/>
+        </qualifier>
+        <!-- inject any dependencies required by this bean -->
+    </bean>
+
+    <bean class="example.SimpleMovieCatalog">
+        <meta key="format" value="DVD"/>
+        <meta key="genre" value="Action"/>
+        <!-- inject any dependencies required by this bean -->
+    </bean>
+
+    <bean class="example.SimpleMovieCatalog">
+        <meta key="format" value="BLURAY"/>
+        <meta key="genre" value="Comedy"/>
+        <!-- inject any dependencies required by this bean -->
+    </bean>
+
+</beans>
+```
 
 
 
-
-
-
-
-
-
-
-
-
-
-
+### 1.9.5 使用泛型作为自动装配限定符
 
 
 
