--- a/docs/01.文档翻译/01.Spring Framework/01.core.md
+++ b/docs/01.文档翻译/01.Spring Framework/01.core.md
@@ -2973,7 +2973,265 @@ public class MovieRecommender {
 
 
 
-### 1.9.5 使用泛型作为自动装配限定符
+### 1.9.5. 使用泛型作为自动装配限定符
+
+除了@Qualifier注解外，还可以使用Java泛型作为隐式的限定形式。例如，假设您有以下配置：
+
+```java
+@Configuration
+public class MyConfiguration {
+
+    @Bean
+    public StringStore stringStore() {
+        return new StringStore();
+    }
+
+    @Bean
+    public IntegerStore integerStore() {
+        return new IntegerStore();
+    }
+}
+```
+
+假设前面的bean实现了泛型接口，（即Store\<String\>和Store\<Integer\>），当泛型用作限定符时你可以使用@Autowire自动注入Store接口，如以下示例：
+
+```java
+@Autowired
+private Store<String> s1; // <String> qualifier, injects the stringStore bean
+
+@Autowired
+private Store<Integer> s2; // <Integer> qualifier, injects the integerStore bean
+```
+
+泛型限定符也适用于自动注入lists,Map和数组。如以下示例：
+
+```java
+// Inject all Store beans as long as they have an <Integer> generic
+// Store<String> beans will not appear in this list
+@Autowired
+private List<Store<Integer>> s;
+```
+
+
+
+### 1.9.6. 使用`CustomAutowireConfigurer`
+
+CustomAutowirecConfigurer是一个BeanFactoryPostProcessor，它允许您注册自己的自定义限定符注解类型，即使它们没有使用Spring的@Qualifier注解。参考以下示例：
+
+```xml
+<bean id="customAutowireConfigurer"
+        class="org.springframework.beans.factory.annotation.CustomAutowireConfigurer">
+    <property name="customQualifierTypes">
+        <set>
+            <value>example.CustomQualifier</value>
+        </set>
+    </property>
+</bean>
+```
+
+`AutowireCandidateResolver`通过以下方式确定Autowire候选者：
+
+- 每个Bean定义的autowire-candidate值
+
+- 在\<bean /\>元素上可用的任何default-autowire-candidates
+- @Qualifier注解和使用CustomAutowireConfigurer注册的任何自定义注解
+
+当多个bean限定为autowire候选者时，确定“primary”的原则如下：如果候选者中的一个bean定义primary属性为true，则被选中。
+
+
+
+### 1.9.7. 使用@Resource注入
+
+Spring还支持使用JSR-250 @Resource注解（javax.annotation.resource）在字段或bean属性setter方法上注入。这是Java EE中的常见模式：例如，在JSF管理Bean和JAX-WS端点中。Spring支持Spring管理对象的此模式。
+
+@Resource有一个name属性。默认情况下，Spring将该值解释为要注入的bean名称。换句话说，它遵循名称语义，如下例所示：
+
+```java
+public class SimpleMovieLister {
+
+    private MovieFinder movieFinder;
+
+    @Resource(name="myMovieFinder") 
+    public void setMovieFinder(MovieFinder movieFinder) {
+        this.movieFinder = movieFinder;
+    }
+}
+```
+
+如果未明确指定名称，则默认名称派生自字段名称或Setter方法。如果是一个字段，它是字段名称。如果是setter方法，则它是bean属性名称。以下示例将用名为movieFinder的bean注入其setter方法：
+
+```java
+public class SimpleMovieLister {
+
+    private MovieFinder movieFinder;
+
+    @Resource
+    public void setMovieFinder(MovieFinder movieFinder) {
+        this.movieFinder = movieFinder;
+    }
+}
+```
+
+> :information_source:该注解提供的名称被CommonAnnotationBeanPostProcessor所知的ApplicationContext解析为Bean名称。如果您明确配置Spring的[`SimpleJndiBeanFactory`](https://docs.spring.io/spring-framework/docs/5.3.2/javadoc-api/org/springframework/jndi/support/SimpleJndiBeanFactory.html) ，则可以通过JNDI解析名称。但是，我们建议您依靠默认行为，并使用Spring的JNDI查找功能来保留间接级别。
+
+在@Resource没有显式指定名称情况下，类似于@Autowired，@Resource按主类型匹配而不是特定的bean名称，并解析可解析依赖项：BeanFactory，ApplicationContext，ResourceLoader，ApplicationEventPublisher和MessageSource接口
+
+因此，在以下示例中，customerPreferenceDao字段首先查找名为“customerPreferenceDao”的bean，找不到时再去按CustomerPreferenceDao的主要类型匹配：
+
+```java
+public class MovieRecommender {
+
+    @Resource
+    private CustomerPreferenceDao customerPreferenceDao;
+
+    @Resource
+    //基于已知的可解析依赖项类型(ApplicationContext)注入上下文字段：
+    private ApplicationContext context; 
+
+    public MovieRecommender() {
+    }
+
+    // ...
+}
+```
+
+
+
+### 1.9.8. 使用@Value
+
+@Value通常用于注入外部属性：
+
+```java
+@Component
+public class MovieRecommender {
+
+    private final String catalog;
+
+    public MovieRecommender(@Value("${catalog.name}") String catalog) {
+        this.catalog = catalog;
+    }
+}
+```
+
+```java
+@Configuration
+@PropertySource("classpath:application.properties")
+public class AppConfig { }
+```
+
+application.properties文件定义如下：
+
+```xml
+catalog.name=MovieCatalog
+```
+
+在这种情况下，catalog参数和字段将等于MovieCatalog。
+
+默认的内嵌值解析器由Spring提供。它将尝试解析属性值，如果无法解析，则属性名称（例如$ {catalog.name}）将被作为注入值。如果要保持对不存在的值的控制，则应声明名为PropertySourcesPlaceholderConfigurer的Bean，如以下示例：
+
+```java
+@Configuration
+public class AppConfig {
+
+     @Bean
+     public static PropertySourcesPlaceholderConfigurer propertyPlaceholderConfigurer() {
+           return new PropertySourcesPlaceholderConfigurer();
+     }
+}
+```
+
+> :information_source:使用javaconfig配置PropertySourcesPlaceholderConfigurer时，@Bean方法必须是静态的。
+
+使用上述配置确保如果无法解决任何$ {}占位符，则会确保Spring初始化失败。也可以使用setPlaceholderPrefix，setPlaceholderSuffix或setValueSeparator等方法来定制占位符。
+
+> :information_source:Spring Boot默认配置了PropertySourcesPlaceholderConfigurer，它将从application.properties和application.yml文件中获取属性。
+
+Spring提供的内置转换器支持允许自动处理简单类型转换（例如Integer或int）。无需额外操作，可以自动将多个逗号分隔值自动转换为字符串数组。如以下示例：
+
+```java
+@Component
+public class MovieRecommender {
+
+    private final String catalog;
+
+    public MovieRecommender(@Value("${catalog.name:defaultCatalog}") String catalog) {
+        this.catalog = catalog;
+    }
+}
+```
+
+Spring的 BeanPostProcessor使用ConversionService来处理将@Value中的字符串值转换为目标类型的过程。如果要为自己的自定义类型提供转换支持，则可以提供自己的ConversionService Bean实例，如以下示例：
+
+```java
+@Configuration
+public class AppConfig {
+
+    @Bean
+    public ConversionService conversionService() {
+        DefaultFormattingConversionService conversionService = new DefaultFormattingConversionService();
+        conversionService.addConverter(new MyCustomConverter());
+        return conversionService;
+    }
+}
+```
+
+当@Value包含SpEL表达式时，值会动态计算，如以下示例：
+
+```java
+@Component
+public class MovieRecommender {
+
+    private final String catalog;
+
+    public MovieRecommender(@Value("#{systemProperties['user.catalog'] + 'Catalog' }") String catalog) {
+        this.catalog = catalog;
+    }
+}
+```
+
+SpEL还可以使用更复杂的数据结构：
+
+```java
+@Component
+public class MovieRecommender {
+
+    private final Map<String, Integer> countOfMoviesPerCatalog;
+
+    public MovieRecommender(
+            @Value("#{{'Thriller': 100, 'Comedy': 300}}") Map<String, Integer> countOfMoviesPerCatalog) {
+        this.countOfMoviesPerCatalog = countOfMoviesPerCatalog;
+    }
+}
+```
+
+
+
+### 1.9.9. 使用`@PostConstruct`和`@PreDestroy`
+
+CommonAnnotationBeanPostProcessor不仅识别@Resource注解，还识别JSR-250生命周期注解：javax.annotation.PostConstruct和javax.annotation.PreDestroy。在Spring 2.5中引入，对这些注解的支持提供了初始化回调和销毁回调中描述的生命周期回调机制的替代方案。如果CommonAnnotationBeanPostProcessor在Spring ApplicationContext中注册，被这些注解标注的方法会在Spring对应的生命周期接口或声明的回调方法中调用。在以下示例中，缓存在初始化后预先存储并在销毁时清除：
+
+```java
+public class CachingMovieLister {
+
+    @PostConstruct
+    public void populateMovieCache() {
+        // populates the movie cache upon initialization...
+    }
+
+    @PreDestroy
+    public void clearMovieCache() {
+        // clears the movie cache upon destruction...
+    }
+}
+```
+
+有关组合各种生命周期机制的影响的详细信息，请参阅[组合生命周期机制](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#beans-factory-lifecycle-combined-effects)。
+
+> :information_source:与@Resource一样，@PostConstruct和@PreDestroy注解是来自JDK 6到8的标准Java库的一部分。但是，整个javax.annotation包与JDK 9中的核心Java模块分开，最终在JDK 11中删除。如果需要，javax.annotation-api现在需要通过Maven获得，只需将其添加到应用程序的类路径。
+
+
+
+## 1.10. ClassPath扫描和可管理组件
 
 
 
