feat: spring core翻译至1.10.3

--- a/docs/01.文档翻译/01.Spring Framework/01.core.md
+++ b/docs/01.文档翻译/01.Spring Framework/01.core.md
@@ -3233,6 +3233,100 @@ public class CachingMovieLister {
 
 ## 1.10. ClassPath扫描和可管理组件
 
+本章中大多数示例使用XML指定在Spring容器中生成每个BeanDefinition的配置元数据。上一节（基于注解的容器配置）演示了如何通过注解提供大量配置元数据。然而，即使在这些示例中，也要在XML文件中明确定义“基本”Bean定义，而注解仅驱动依赖注入。本节介绍通过扫描类路径隐式探测候选组件。候选组件是与过滤条件匹配的类，并具有对容器注册的相应bean定义。这能替代使用XML执行bean注册。相反，您可以使用注解（例如，@Component），AspectJ类型表达式或您自己的自定义筛选条件，以选择那些类具有在容器中注册的bean定义。
+
+> :information_source:从Spring 3.0开始，Spring JavaConfig 项目提供的许多功能都是spring core的一部分。这允许您使用Java而不是使用传统的XML文件来定义Bean。查看@Configuration，@Bean，@Import和@DependsOn注解，了解如何使用这些新功能。
+
+
+
+### 1.10.1. @Component和其他原型注解
+
+@Repository注解表示符合存储库角色或原型的类（也称为数据访问对象或DAO）。该标记的用途是异常的自动翻译，如[Exception Translation](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/data-access.html#orm-exception-translation)中所述。
+
+Spring提供了其他原型注解：@Component，@Service和@Controller。@Component是任何Spring托管组件的通用原型。@Repository，@Service和@Controller是@Component专门用于更具体场景的用例（分别在持久层，服务和演示层中）。因此，您可以使用@Component标注你的组件类，但是，通过使用@Repository，@Service或@Controller标注它们，你的类更适合通过工具处理或与切面相关联。例如，这些原型注解为切点提供了目标。@Repository，@Service和@Controller还可以在Spring框架的未来版本中携带额外的语义。因此，如果你在服务层使用@Component或@Service之间选择，则@Service显然是更好的选择。同样，如前所述，@Repository已被支持为持久层中的自动异常转换的标记。
+
+### 1.10.2 使用元注解和组合注解
+
+Spring提供的许多注解可以用作代码中的元注解。元注解是可以应用于另一个注解的注解。例如，前面提到的@Service注解是使用元注解@Component标注的，如以下示例：
+
+```java
+@Target(ElementType.TYPE)
+@Retention(RetentionPolicy.RUNTIME)
+@Documented
+@Component //组件导致@Service以与@Component相同的方式处理。
+public @interface Service {
+
+    // ...
+}
+```
+
+您还可以组合元注解以创建组合注解。例如，Spring MVC的@RestController注解由@Controller和@ResponseBody组成。
+
+此外，组合注解允许重定义元注解的属性。当您只想暴露元注解的属性的子集时，这可能特别有用。例如，Spring的@SessionScope注解硬件码scope为session，但仍允许自定义proxyMode。以下显示了SessionsCope注解的定义：
+
+```java
+@Target({ElementType.TYPE, ElementType.METHOD})
+@Retention(RetentionPolicy.RUNTIME)
+@Documented
+@Scope(WebApplicationContext.SCOPE_SESSION)
+public @interface SessionScope {
+
+    /**
+     * Alias for {@link Scope#proxyMode}.
+     * <p>Defaults to {@link ScopedProxyMode#TARGET_CLASS}.
+     */
+    @AliasFor(annotation = Scope.class)
+    ScopedProxyMode proxyMode() default ScopedProxyMode.TARGET_CLASS;
+
+}
+```
+
+然后，你可以使用@SessionScope而不声明proxyode，如下所示：
+
+```java
+@Service
+@SessionScope
+public class SessionScopedService {
+    // ...
+}
+```
+
+你也可以覆盖proxyMode的值，如以下示例：
+
+```java
+@Service
+@SessionScope(proxyMode = ScopedProxyMode.INTERFACES)
+public class SessionScopedUserService implements UserService {
+    // ...
+}
+```
+
+有关详细信息，请参阅 [Spring Annotation Programming Model](https://github.com/spring-projects/spring-framework/wiki/Spring-Annotation-Programming-Model)Wiki页面。
+
+### 1.10.3. 自动探测类和注册Bean定义
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
