feat: Spring core翻译至1.10.5章节

--- a/docs/01.文档翻译/01.Spring Framework/01.core.md
+++ b/docs/01.文档翻译/01.Spring Framework/01.core.md
@@ -1786,7 +1786,7 @@ Spring Framework提供了许多接口，可以用于自定义Bean的性质。本
 
 要与容器管理的bean生命周期交互，你可以实现`InitializingBean`和`DisposableBean`接口，容器会在前者下调用`afterPropertiesSet()`，在后者调用`destroy()`方法，让bean在初始化和销毁的时候执行某些操作。
 
-> :bulb: JSR-250 @PostConstruct和@predestroy注解通常被认为是在现代Spring应用中接收生命周期回调的最佳实践。使用这些注解意味着您的bean不耦合到Spring特定的接口。
+> :bulb: JSR-250 @PostConstruct和@Predestroy注解通常被认为是在现代Spring应用中接收生命周期回调的最佳实践。使用这些注解意味着您的bean不耦合到Spring特定的接口。
 >
 > 如果您不想使用JSR-250注解，又需要解耦，请考虑使用`init-method`和`destroy-method`的 bean定义元数据。
 
@@ -1802,7 +1802,7 @@ Spring Framework提供了许多接口，可以用于自定义Bean的性质。本
 void afterPropertiesSet() throws Exception;
 ```
 
-**我们建议您不要使用`InitializingBean`接口，因为它不必要地将代码耦合到Spring。或者，我们建议使用`@PostConstruct`注解或指定POJO初始化方法。在基于XML的配置元数据的情况下，您可以使用init-method属性指定具有void No-Argument签名的方法的名称。使用Java配置，您可以使用@Bean的initmethod属性。**请参阅[接收生命周期回调](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#beans-java-lifecycle-callbacks)。考虑以下示例：
+我们建议您不要使用`InitializingBean`接口，因为它不必要地将代码耦合到Spring。或者，我们建议使用`@PostConstruct`注解或指定POJO初始化方法。在基于XML的配置元数据的情况下，您可以使用init-method属性指定具有void No-Argument签名的方法的名称。使用Java配置，您可以使用@Bean的initmethod属性。请参阅[接收生命周期回调](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#beans-java-lifecycle-callbacks)。考虑以下示例：
 
 ```xml
 <bean id="exampleInitBean" class="examples.ExampleBean" init-method="init"/>
@@ -3305,25 +3305,110 @@ public class SessionScopedUserService implements UserService {
 
 ### 1.10.3. 自动探测类和注册Bean定义
 
+Spring可以自动检测原型类并使用ApplicationContext注册相应的BeanDefinition实例。例如，以下两个类会被自动检测：
+
+```java
+@Service
+public class SimpleMovieLister {
+
+    private MovieFinder movieFinder;
+
+    public SimpleMovieLister(MovieFinder movieFinder) {
+        this.movieFinder = movieFinder;
+    }
+}
+```
+
+```java
+@Repository
+public class JpaMovieFinder implements MovieFinder {
+    // implementation elided for clarity
+}
+```
+
+要自动检测这些类并注册相应的bean，您需要将@ComponentScan添加到@Configuration标注的类上，其中basePackages属性是以上两个类的父包。（或者，您可以指定包含每个类的父包的以逗号、分号或空格分隔的列表。）
+
+```java
+@Configuration
+@ComponentScan(basePackages = "org.example")
+public class AppConfig  {
+    // ...
+}
+```
+
+> :information_source:简洁点，前面的示例可以使用注解的value属性（即，@ComponenScan（“org.example”））。
+
+对应的XML配置如下：
+
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<beans xmlns="http://www.springframework.org/schema/beans"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xmlns:context="http://www.springframework.org/schema/context"
+    xsi:schemaLocation="http://www.springframework.org/schema/beans
+        https://www.springframework.org/schema/beans/spring-beans.xsd
+        http://www.springframework.org/schema/context
+        https://www.springframework.org/schema/context/spring-context.xsd">
+
+    <context:component-scan base-package="org.example"/>
+
+</beans>
+```
+
+> :bulb:\<context:component-scan\>隐式启用了\<context:annotation-config\>的功能。使用\<context:component-scan\>时，通常不需要包含\<context:annotation-config\>元素。
 
 
 
+> :information_source:类路径包的扫描需要类路径中存在相应的目录。当使用Ant构建JAR时，请确保不会激活JAR任务的仅限文件开关。此外，由于某些环境中的安全策略可能不会暴露类路径目录--例如，在JDK 1.7.0_45和更高的独立应用程序（需要在manifests 中设置‘Trusted-Library’--参考https://stackoverflow.com/questions/19394570/java-jre-7u45-breaks-classloader-getresources）
+
+此外，使用component-scan时，AutowiredAnnotationBeanPostProcessor和CommonAnnotationBeanPostProcessor都被隐式包含。这意味着两个组件被自动检测并连接在一起 - 并不需要在XML中提供Bean配置元数据。
+
+> :information_source:您可以通过设置annotation-config为false来禁用AutowiredAnnotationBeanPostProcessor和CommonAnnotationBeanPostProcessor的注册。
 
 
 
+### 1.10.4. 使用过滤器自定义扫描
+
+默认情况下，使用@Component，@ Repository，@Service，@Controller，@Configuration或继承了@Component的自定义注解的类才被自动检测。但是，您可以通过应用自定义过滤器来修改和扩展此行为。将它们添加为@Componentscan的`includeFilters`或者`excludeFilters`属性（或作为\<context:component-scan\>的子元素\<context:include-filter /\>和\<context:exclude-filter /\>）。每个过滤元素都需要`type`和`expression`属性。下表介绍了过滤选项：
+
+| 过滤类型          | 示例表达式                 | 描述                                                       |
+| ----------------- | -------------------------- | ---------------------------------------------------------- |
+| annotation (默认) | org.example.SomeAnnotation | 在目标组件中的类层级上存在或作为元数据的注解               |
+| assignable        | org.example.SomeClass      | 目标组件扩展或实现的类（或接口）                           |
+| aspectj           | org.example..*Service+     | 匹配目标组件的AspectJ 类型表达式                           |
+| regex             | org\.example\.Default.*    | 匹配目标组件类名的正则表达式                               |
+| custom            | org.example.MyTypeFilter   | 自定义实现`org.springframework.core.type.TypeFilter`接口。 |
+
+以下示例显示了忽略所有@Repository注释的配置，并使用“stub”仓储：
+
+```java
+@Configuration
+@ComponentScan(basePackages = "org.example",
+        includeFilters = @Filter(type = FilterType.REGEX, pattern = ".*Stub.*Repository"),
+        excludeFilters = @Filter(Repository.class))
+public class AppConfig {
+    ...
+}
+```
+
+等价XML配置如下：
+
+```xml
+<beans>
+    <context:component-scan base-package="org.example">
+        <context:include-filter type="regex"
+                expression=".*Stub.*Repository"/>
+        <context:exclude-filter type="annotation"
+                expression="org.springframework.stereotype.Repository"/>
+    </context:component-scan>
+</beans>
+```
+
+> :information_source:您还可以通过在注解上设置`useDefaultFilters=false`或在\<component-scan /\>中配置`use-default-filters="false"`来禁用默认过滤器。这有效地禁用自动检测带有@Component，@Repository，@Service，@Controller，@RestController，@Configuration或被@Component标注的注解。
 
 
 
-
-
-
-
-
-
-
-
-
-
+### 1.10.5. 在组件内定义Bean元数据
 
 
 
