feat: Spring core翻译至1.10.6

--- a/docs/01.文档翻译/01.Spring Framework/01.core.md
+++ b/docs/01.文档翻译/01.Spring Framework/01.core.md
@@ -3410,6 +3410,97 @@ public class AppConfig {
 
 ### 1.10.5. 在组件内定义Bean元数据
 
+Spring组件还可以将Bean定义元数据放到容器。可以在@Configuration标注的类中使用@Bean来定义bean原数量，以下示例显示了如何执行此操作：
+
+```java
+@Component
+public class FactoryMethodComponent {
+
+    @Bean
+    @Qualifier("public")
+    public TestBean publicInstance() {
+        return new TestBean("publicInstance");
+    }
+
+    public void doWork() {
+        // Component method implementation omitted
+    }
+}
+```
+
+该类是一个Spring组件，它在其doWork()方法中具有特定于应用程序的代码。但是，它还有一个包含bean定义的工厂方法publicInstance()。@Bean注解标识此工厂方法和其他bean定义属性，例如通过@Qualifier指定限定值。可以指定的其他方法级注解是@Scope，@Lazy和自定义限定符注解。
+
+> :bulb:除了为组件初始化的作用外，还可以在标有@Autowired或@Inject的注入点上使用@Lazy注注解。在这种情况下，它会注入一个懒加载的代理类。
+
+如前所述，支持自动注入的字段和方法，并为@Bean方法的自动装配提供了额外的支持。以下示例显示了如何执行此操作：
+
+```java
+@Component
+public class FactoryMethodComponent {
+
+    private static int i;
+
+    @Bean
+    @Qualifier("public")
+    public TestBean publicInstance() {
+        return new TestBean("publicInstance");
+    }
+
+    // use of a custom qualifier and autowiring of method parameters
+    @Bean
+    protected TestBean protectedInstance(
+            @Qualifier("public") TestBean spouse,
+            @Value("#{privateInstance.age}") String country) {
+        TestBean tb = new TestBean("protectedInstance", 1);
+        tb.setSpouse(spouse);
+        tb.setCountry(country);
+        return tb;
+    }
+
+    @Bean
+    private TestBean privateInstance() {
+        return new TestBean("privateInstance", i++);
+    }
+
+    @Bean
+    @RequestScope
+    public TestBean requestScopedInstance() {
+        return new TestBean("requestScopedInstance", 3);
+    }
+}
+```
+
+该示例自动将名为privateInstance的bean的age属性值注入到方法的country字符串参数。Spring表达式语言元素通过符号＃{<表达式>}定义属性的值。对于@Value注解，在解析表达式文本时，请预先配置表达式解析器以查找Bean名称。
+
+从Spring Framework 4.3起，可以声明类型注入点（或其更具体的子类：DependencyDescriptor）的工厂方法参数，以访问触发当前bean创建的请求注入点。请注意，这仅适用于Bean实例的实际创建，而不是注入现有实例。因此，此功能对原型范围的bean最有意义。对于其他作用域，工厂方法只能看到触发在给定范围内创建新Bean实例的注入点（例如，触发懒惰单例Bean创建的依赖项）。您可以在这种情况下使用提供的注入点元数据与语义关注。以下示例显示了如何使用注入点：
+
+```java
+@Component
+public class FactoryMethodComponent {
+
+    @Bean @Scope("prototype")
+    public TestBean prototypeInstance(InjectionPoint injectionPoint) {
+        return new TestBean("prototypeInstance for " + injectionPoint.getMember());
+    }
+}
+```
+
+**常规Spring组件中的@Bean方法与@Configuration标注的类中的处理有所不同**。不同之处在于@Component标注的类不会使用CGLIB增强以拦截方法和字段的调用。CGLIB代理是@Configuration类中的@Bean方法中的调用方法或字段的方法创建对协作对象的bean元数据引用。此类方法不会用正常的Java语义调用，即使通过对@Bean方法的程序调用引用其他bean，而是通过容器调用，以便提供Spring bean的通常的生命周期管理和代理。相比之下，在纯@Component类中调用@Bean方法中的方法或字段具有标准的Java语义，没有特殊的CGLIB处理或应用其他约束。
+
+> :bulb:可以将@Bean方法声明为静态，允许调用它们，而无需将其包含配置类作为实例。在定义后处理器bean（例如BeanFactoryPostProcessor或BeanPostProcessor）时，这会特别有意义，因为此类Bean早期在容器生命周期中初始化，并且应避免在该点处触发配置的其他部分。
+>
+> 调用静态@Bean方法永远不会被容器拦截，甚至在@Configuration类中（如本节前面所述），由于技术限制：CGLIB子类仅可以覆盖非静态方法。因此，对另一个@Bean方法的直接调用具有标准的Java语义，从而从工厂方法本身直接返回独立的实例。
+>
+> @Bean方法的Java语言可见性对Spring的容器中产生的bean定义没有直接影响。可以自由声明工厂方法，非@Configuration配置类中也行，其他任何地方的静态方法也行。但是，@Configuration类中的常规@Bean方法需要可覆盖 - 也就是说，它们不得被声明为private或final。
+>
+> @Bean方法也可在给定组件或配置类的基类上，以及在组件或配置类实现的接口中声明的Java 8默认方法被找到。这使得可以做很复杂的配置，并且自Spring 4.2起通过Java 8默认方法来实现多继承。
+>
+> 最后，单个类可能有同一bean的@Bean方法，作为多个工厂方法的配置，具体取决于运行时的可用依赖项。这与选择“贪婪”构造函数或工厂方法的其他配置方案中的算法相同：在构造时挑选具有最大数量的满足依赖性的变体，类似于容器如何在多个@Autowired构造函数之间选择。
+
+
+
+### 1.10.6. 命名自动检测组件
+
 
 
 
