--- a/docs/01.文档翻译/01.Spring Framework/01.core.md
+++ b/docs/01.文档翻译/01.Spring Framework/01.core.md
@@ -3499,9 +3499,173 @@ public class FactoryMethodComponent {
 
 
 
-### 1.10.6. 命名自动检测组件
+### 1.10.6. 命名自动探测组件
+
+当组件作为扫描过程的一部分被自动检测到时，其Bean名称由该扫描过程已知的BeanNameGenerator策略生成。默认情况下，包含value属性的任何Spring原型注解（@Component，@Repository，@Service和@Controller）将该名称提供给相应的bean定义。
+
+如果这样的注解value没有设值或任何其他检测到的组件（例如自定义过滤器发现的组件），则默认bean名称生成器返回首字母小写的非限定类名。例如，如果检测到以下组件类，则该名称将是myMovieLister和movieFinderImpl：
+
+```java
+@Service("myMovieLister")
+public class SimpleMovieLister {
+    // ...
+}
+```
+
+```java
+@Repository
+public class MovieFinderImpl implements MovieFinder {
+    // ...
+}
+```
+
+如果您不想依赖默认的bean命名策略，您可以提供自定义bean命名策略。首先，实现BeanNameGenerator接口，并确保包含默认的无参构造函数。然后，在配置扫描器时提供全限定类名，如以下示例。
+
+> :bulb:如果由于具有相同的非限定类名（即具有相同名称的类但所在包不同）而遇到命名冲突，则可能需要配置默认为完全限定的类名的BeanNameGenerator。Spring Framework 5.2.3起，FullyQualifiedAnnotationBeanNameGenerator位于org.springframework.context.annotation中。
+
+```java
+@Configuration
+@ComponentScan(basePackages = "org.example", nameGenerator = MyNameGenerator.class)
+public class AppConfig {
+    // ...
+}
+```
+
+```xml
+<beans>
+    <context:component-scan base-package="org.example"
+        name-generator="org.example.MyNameGenerator" />
+</beans>
+```
+
+作为一般规则，每当其他组件明确引用它时，请考虑使用注解指定名称。另一方面，只要容器负责注入，自动生成的名称就足够了。
 
 
+
+### 1.10.7. 提供自动探测组件的作用域
+
+与spring管理的组件一样，自动探测组件的默认和最常见的作用域是单例。但是，有时需要一个可以由@Scope注解指定的不同作用域。你可以在注解中提供作用域的名称，如以下示例显示：
+
+```java
+@Scope("prototype")
+@Repository
+public class MovieFinderImpl implements MovieFinder {
+    // ...
+}
+```
+
+> :information_source:@Scope注解仅在具体Bean类（被注解的组件）或工厂方法（用于@Bean方法）上。与XML Bean定义相比，没有Bean定义继承的概念，并且类级别的继承层次结构与元数据目的无关。
+>
+> 为了提供自定义作用域解决策略而不是依赖基于注解的方法，可以实现[`ScopeMetadataResolver`](https://docs.spring.io/spring-framework/docs/5.3.2/javadoc-api/org/springframework/context/annotation/ScopeMetadataResolver.html)接口。请务必包含默认的无参构造函数。然后，您可以在配置扫描器时提供完全限定的类名，如以下示例：
+
+```java
+@Configuration
+@ComponentScan(basePackages = "org.example", scopeResolver = MyScopeResolver.class)
+public class AppConfig {
+    // ...
+}
+```
+
+```xml
+<beans>
+    <context:component-scan base-package="org.example" scoped-proxy="interfaces"/>
+</beans>
+```
+
+
+
+### 1.10.8. 用注解提供限定符元数据
+
+@Qualifier在前面章节已经讨论。该部分中的示例演示了使用@Qualifier注解和自定义限定符注解，以便在您解析自动注入候选时提供细粒度控制。因为这些示例基于XML Bean定义，所以通过使用XML中的Bean元素的限定符或元子元素，在候选bean定义上提供限定符元数据。依赖于类路径扫描进行自动检测组件时，可以在候选类上提供具有类型级注解的限定符元数据。以下三个例子演示了这种技术：
+
+```java
+@Component
+@Qualifier("Action")
+public class ActionMovieCatalog implements MovieCatalog {
+    // ...
+}
+```
+
+```java
+@Component
+@Genre("Action")
+public class ActionMovieCatalog implements MovieCatalog {
+    // ...
+}
+```
+
+```java
+@Component
+@Offline
+public class CachingMovieCatalog implements MovieCatalog {
+    // ...
+}
+```
+
+> :information_source:与大多数基于注解的替代方案一样，记住注解元数据绑定到类定义本身，而XML的使用允许多个相同类型的Bean提供其限定符元数据的变体，因为元数据是为每个实例提供而不是每个类。
+
+### 1.10.9. 生成候选组件的索引
+
+虽然类路径扫描非常快，但可以通过在编译时间创建候选者的静态列表来提高大型应用程序的启动性能。在此模式下，组件扫描目标的所有模块都必须使用此机制。
+
+> :information_source:现有的@ComponentScan或\<context:component-scan\>指令必须保留，以请求上下文扫描正确软件包中的候选者。当ApplicationContext检测到这样的索引时，它会自动使用它而不是扫描类路径。
+
+要生成索引，请为每个包含组件扫描指令的组件的模块添加一个额外依赖项。以下示例显示了如何使用maven执行此操作：
+
+```xml
+<dependencies>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context-indexer</artifactId>
+        <version>5.3.2</version>
+        <optional>true</optional>
+    </dependency>
+</dependencies>
+```
+
+使用Gradle 4.5及更早版本，应在compileOnly配置中声明依赖项，如以下示例所示：
+
+```groovy
+dependencies {
+    compileOnly "org.springframework:spring-context-indexer:5.3.2"
+}
+```
+
+使用Gradle 4.6及更高版本，应在annotationProcessor配置中声明依赖项，如以下示例所示：
+
+```groovy
+dependencies {
+    annotationProcessor "org.springframework:spring-context-indexer:{spring-version}"
+}
+```
+
+该过程在JAR文件中生成META-INF/spring.components文件。
+
+> :information_source:在IDE中使用此模式时，spring-context-indexer必须注册为注解处理器，以确保更新候选组件时索引是最新的。
+
+
+
+> :bulb:在类路径上找到META-INF/spring.components时，索引将自动启用。如果索引部分可用于某些库（或用例），但无法为整个应用程序构建，您可以通过将spring.index.ignore设置为true，作为系统属性或在类路径根目录中的spring.properties文件中,以常规类路径配置（好像根本没有索引）。
+
+
+
+## 1.11. 使用JSR330标准注解
+
+从Spring 3.0开始，Spring为JSR-330标准注解提供支持（依赖注入）。这些注解以与Spring注解相同的方式扫描。要使用它们，您需要在类路径中拥有相关的JAR。
+
+> :information_source:如果使用maven，则标准Maven存储库（https://repo1.maven.org/maven2/javax/inject/javax.inject/1/）中提供了javax.inject。您可以将以下依赖添加到您的文件pom.xml：
+>
+> ```xml
+> <dependency>
+>     <groupId>javax.inject</groupId>
+>     <artifactId>javax.inject</artifactId>
+>     <version>1</version>
+> </dependency>
+> ```
+
+
+
+### 1.11.1. 使用@Inject和@Named依赖注入
 
 
 
@@ -3525,4 +3689,4 @@ public class FactoryMethodComponent {
 - **缓存（Cache）** - 缓存存储服务的引用，以便复用它们。
 - **客户端（Client）** - Client 是通过 ServiceLocator 调用服务的对象。
 
-![servicelocator_pattern_uml_diagram.jpg](http://img.php.cn/upload/image/614/338/876/1486194513420223.jpg)
+![servicelocator_pattern_uml_diagram.jpg](https://www.runoob.com/wp-content/uploads/2014/08/20201015-service-locator.svg)
