--- a/docs/01.文档翻译/01.Spring Framework/01.core.md
+++ b/docs/01.文档翻译/01.Spring Framework/01.core.md
@@ -3667,6 +3667,179 @@ dependencies {
 
 ### 1.11.1. 使用@Inject和@Named依赖注入
 
+相对于@Autowired，你可以使用@javax.inject.Inject，如下所示：
+
+```java
+import javax.inject.Inject;
+
+public class SimpleMovieLister {
+
+    private MovieFinder movieFinder;
+
+    @Inject
+    public void setMovieFinder(MovieFinder movieFinder) {
+        this.movieFinder = movieFinder;
+    }
+
+    public void listMovies() {
+        this.movieFinder.findMovies(...);
+        // ...
+    }
+}
+```
+
+与@Autowired一样，可以在字段级别，方法级别和构造函数-参数级别使用@Inject。此外，您可以将注入点声明为Provider，允许通过调用Provider.get()按需接受更短作用域或延迟访问其他bean。以下示例提供了前一个示例的变体：
+
+```java
+import javax.inject.Inject;
+import javax.inject.Provider;
+
+public class SimpleMovieLister {
+
+    private Provider<MovieFinder> movieFinder;
+
+    @Inject
+    public void setMovieFinder(Provider<MovieFinder> movieFinder) {
+        this.movieFinder = movieFinder;
+    }
+
+    public void listMovies() {
+        this.movieFinder.get().findMovies(...);
+        // ...
+    }
+}
+```
+
+如果注入依赖项时想使用限定符名称，则应使用@Named，如以下示例所示：
+
+```java
+import javax.inject.Inject;
+import javax.inject.Named;
+
+public class SimpleMovieLister {
+
+    private MovieFinder movieFinder;
+
+    @Inject
+    public void setMovieFinder(@Named("main") MovieFinder movieFinder) {
+        this.movieFinder = movieFinder;
+    }
+
+    // ...
+}
+```
+
+与@Autowired一样，@Inject也可以与java.util.Optional或@Nullable一起使用。此处甚至更适用，因为@Inject没有必需的属性。
+
+```java
+public class SimpleMovieLister {
+
+    @Inject
+    public void setMovieFinder(Optional<MovieFinder> movieFinder) {
+        // ...
+    }
+}
+```
+
+```java
+public class SimpleMovieLister {
+
+    @Inject
+    public void setMovieFinder(@Nullable MovieFinder movieFinder) {
+        // ...
+    }
+}
+```
+
+
+
+### 1.11.2. @Named和@ManagedBean：标准等同于@Component
+
+相对于@Component，可以使用@ javax.inject.Named或javax.annotation.ManagedBean，如以下示例显示：
+
+```java
+import javax.inject.Inject;
+import javax.inject.Named;
+
+@Named("movieListener")  // @ManagedBean("movieListener") could be used as well
+public class SimpleMovieLister {
+
+    private MovieFinder movieFinder;
+
+    @Inject
+    public void setMovieFinder(MovieFinder movieFinder) {
+        this.movieFinder = movieFinder;
+    }
+
+    // ...
+}
+```
+
+使用@Component而不为组件指定名称非常常见。@Named可以以类似的方式使用，如以下示例所示：
+
+```java
+import javax.inject.Inject;
+import javax.inject.Named;
+
+@Named
+public class SimpleMovieLister {
+
+    private MovieFinder movieFinder;
+
+    @Inject
+    public void setMovieFinder(MovieFinder movieFinder) {
+        this.movieFinder = movieFinder;
+    }
+
+    // ...
+}
+```
+
+使用@Named或@ManagedBean时，可以以完全相同的方式使用组件扫描，就像使用Spring注解一样，如以下示例所示：
+
+```java
+@Configuration
+@ComponentScan(basePackages = "org.example")
+public class AppConfig  {
+    // ...
+}
+```
+
+> :information_source:与@Component相比，JSR-330 @Named和JSR-250 ManagedBean注解不可组合。应该使用Spring的原型模型来构建自定义组件注解。
+
+### 1.11.3.  JSR-330标准注解的限制
+
+当你使用标准注解时，你应该知道不可用的一些重要功能，如下表显示：
+
+| Spring              | javax.inject.*        | javax.inject 限制/注释                                       |
+| :------------------ | :-------------------- | :----------------------------------------------------------- |
+| @Autowired          | @Inject               | `@Inject`的属性可以为空. 可以使用Java 8的`Optional`.         |
+| @Component          | @Named / @ManagedBean | JSR-330 未提供可组合的模式, 只有一种识别命名组件的方法.      |
+| @Scope("singleton") | @Singleton            | JSR-330默认作用域就像Spring的`prototype`. 但是，为了保持与Spring的普遍默认值一致，默认情况下，Spring容器中声明的JSR-330 bean是单例的。为了使用单例以外的作用域, 你应该使用Spring的 `@Scope` annotation. `javax.inject`也提供了 [@Scope](https://download.oracle.com/javaee/6/api/javax/inject/Scope.html) 注解. 但是, 它仅用于创建你自己的注解 |
+| @Qualifier          | @Qualifier / @Named   | `javax.inject.Qualifier` 只是建立自定义限定符的元注解。具体字符串限定符（如Spring的@Qualifier）可以通过`javax.inject.named`关联。 |
+| @Value              | -                     | -                                                            |
+| @Required           | -                     | -                                                            |
+| @Lazy               | -                     | -                                                            |
+| ObjectFactory       | Provider              | `javax.inject.Provider` 是Spring的`ObjectFactory`的直接替代方案,仅有一个简短的`get()` 方法。它也可以与Spring的@Autowired或非注解的构造函数和setter方法组合使用。 |
+
+
+
+## 1.12. 基于Java的容器配置
+
+本节介绍如何在Java代码中使用注解来配置Spring容器。它包括以下主题：
+
+- 基本概念：@Bean和@Configuration
+- 使用AnnotationConfigApplicationContext实例化Spring容器
+- 使用@Bean注解
+- 使用@Configuration注解
+- 编排基于Java的配置
+- Bean定义配置文件
+- PropertySource抽象
+- 使用@PropertySource
+- 语句中的占位符解决方案
+
+### 1.12.1. 基本概念：@Bean和@Configuration
+
 
 
 
