feat: spring core翻译至1.12.2章节

--- a/docs/01.文档翻译/01.Spring Framework/01.core.md
+++ b/docs/01.文档翻译/01.Spring Framework/01.core.md
@@ -3840,6 +3840,43 @@ public class AppConfig  {
 
 ### 1.12.1. 基本概念：@Bean和@Configuration
 
+Spring的新java配置支持@Configuration注解的类和@Bean注解的方法。
+
+@Bean注解用于指示方法实例化，配置并初始化由Spring IoC容器管理的新对象。对于熟悉Spring的\<bean /\> XML配置的人来说，@Bean注解扮演与\<bean /\>元素相同的角色。你可以把@Bean注解的方法和Spring @Component搭配使用。但是，它们通常与@Configuration注解的类一起使用。
+
+使用@Configuration注解类表示其主要目的是作为Bean定义的来源。此外，@Configuration类允许通过调用同一类中的其他@Bean方法来相互依赖。最简单的@Configuration类如下：
+
+```java
+@Configuration
+public class AppConfig {
+
+    @Bean
+    public MyService myService() {
+        return new MyServiceImpl();
+    }
+}
+```
+
+前面的AppConfig类等同于以下spring \<bean /\> xml：
+
+```xml
+<beans>
+    <bean id="myService" class="com.acme.services.MyServiceImpl"/>
+</beans>
+```
+
+> 完整@configuration vs“lite”@Bean模式？
+>
+> 当@Bean方法在未使用@Configuration的类中声明时，它们被称为在“lite”模式下处理。在@Component中声明的Bean方法甚至在普通的old class中被认为是“lite”，具有不同目的，@Bean方法在那里有额外好处。例如，服务组件可以通过每个适用的组件类上的附加@Bean方法将管理视图暴露于容器。在这种情况下，@Bean方法是通用工厂方法机制。
+>
+> 与full @Configuration不同，lite @Bean方法无法声明相互依赖。相反，它们在其包含组件的内部状态上运行，并且可选地在他们可能声明的参数上运行。因此，这种@Bean方法不应调用其他@Bean方法。个此类方法实际上只是特定Bean引用的工厂方法，而没有任何特殊的运行时语义。这里的正面的副作用是在运行时没有施加Cglib子类化，因此在类设计方面没有限制（即，包含类可能是final的等等）。
+>
+> 在一般场景中，要在@Configuration类中声明@Bean方法，确保始终使用“full”模式，因此将跨方法引用重定向到容器的生命周期管理。这可以防止通过常规Java调用意外调用相同的@Bean方法，这有助于减少在“lite”模式下操作时可能产生难以追踪的微妙bug。
+
+@Bean和@Configuration注释在以下章节中深入讨论。然而，我们首先涵盖了通过基于Java的配置创建Spring容器的各种方式。
+
+### 1.12.2 使用`AnnotationConfigApplicationContext`实例化Spring容器
+
 
 
 
