feat: spring core翻译至1.12.3

--- a/docs/01.文档翻译/01.Spring Framework/01.core.md
+++ b/docs/01.文档翻译/01.Spring Framework/01.core.md
@@ -3877,9 +3877,143 @@ public class AppConfig {
 
 ### 1.12.2 使用`AnnotationConfigApplicationContext`实例化Spring容器
 
+以下部分介绍在Spring 3.0中引入的AnnotationConfigApplicationContext。这种多功能ApplicationContext实现不仅能够接受@Configuration类作为输入，而且可以使用JSR-330元数据注解的类和纯@Component类。
+
+当@Configuration类作为输入提供，@Configuration类本身作为bean定义被注册，并且类中的所有@Bean方法也作为bean定义被注册。
+
+当提供@Component和JSR-330类时，它们作为Bean定义被注册，并且假设在必要时在这些类中使用诸如@Autowired或@Inject等DI元数据。
+
+**简单构造**
+
+在实例化ClassPathXmlApplicationContext时使用Spring XML文件作为输入，你可以在实例化AnnotationConfigApplicationContext时使用@Configuration类作为输入。这允许完全无XML使用spring容器，如以下示例显示：
+
+```java
+public static void main(String[] args) {
+    ApplicationContext ctx = new AnnotationConfigApplicationContext(AppConfig.class);
+    MyService myService = ctx.getBean(MyService.class);
+    myService.doStuff();
+}
+```
+
+如前所述，AnnotationConfigApplicationContext不限于仅使用@Configuration类工作。任何@Component或JSR-330注解类都可以作为构造函数输入，如以下示例所示：
+
+```java
+public static void main(String[] args) {
+    ApplicationContext ctx = new AnnotationConfigApplicationContext(MyServiceImpl.class, Dependency1.class, Dependency2.class);
+    MyService myService = ctx.getBean(MyService.class);
+    myService.doStuff();
+}
+```
+
+前面的示例假定MyServiceImpl，Dependency1和Dependency2使用Spring依赖注入注解，例如@Autowired。
+
+**通过使用`register(Class<?>…)`以编程方式构建容器**
+
+您可以使用无惨构造函数实例化AnnotationConfigApplicationContext，然后使用register()方法配置它。当以编程方式构建AnnotationConfigApplicationContext，这种方法特别有用。以下示例显示了如何执行此操作：
+
+```java
+public static void main(String[] args) {
+    AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext();
+    ctx.register(AppConfig.class, OtherConfig.class);
+    ctx.register(AdditionalConfig.class);
+    ctx.refresh();
+    MyService myService = ctx.getBean(MyService.class);
+    myService.doStuff();
+}
+```
+
+**使用`scan(String…)`启用组件扫描**
+
+要启用组件扫描，您可以按如下方式注释您的@configuration类：
+
+```java
+@Configuration
+@ComponentScan(basePackages = "com.acme") 
+public class AppConfig  {
+    ...
+}
+```
+
+> :bulb:对spring熟悉的用户可能知道Spring的context中的XML声明等效应：命名空间，如下示例所示：
+>
+> ```xml
+> <beans>
+>     <context:component-scan base-package="com.acme"/>
+> </beans>
+> ```
+
+在前面的示例中，扫描com.acme包以查找任何@Component注解的类，并且这些类被注册为容器中的Spring Bean。AnnotationConfigApplicationContext暴露scan(String…)方法以允许相同的组件扫描功能，如以下示例所示：
+
+```java
+public static void main(String[] args) {
+    AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext();
+    ctx.scan("com.acme");
+    ctx.refresh();
+    MyService myService = ctx.getBean(MyService.class);
+}
+```
+
+> :information_source:请记住，@Configuration被@Component元注解，因此它们是组件扫描的候选者。在前面的示例中，假设AppConfig在com.acme包中声明（或下面的任何包）中声明，在调用scan()期间被拾取。在调用refresh()时，将处理其所有@Bean方法并将其注册为容器中的Bean。
+
+**使用`AnnotationConfigWebApplicationContext`支持Web应用程序**
+
+AnnotationConfigApplicationContext的变体WebApplicationContext对于AnnotationConfigWebApplicationContext可用。你可以在配置Spring ContextLoaderListener Servlet侦听器，Spring MVC DispatcherServlet等时使用此实现。以下Web.xml片段配置典型的Spring MVC Web应用程序（请注意使用contextClass上context-param和init-param的使用）：
+
+```xml
+<web-app>
+    <!-- Configure ContextLoaderListener to use AnnotationConfigWebApplicationContext
+        instead of the default XmlWebApplicationContext -->
+    <context-param>
+        <param-name>contextClass</param-name>
+        <param-value>
+            org.springframework.web.context.support.AnnotationConfigWebApplicationContext
+        </param-value>
+    </context-param>
+
+    <!-- Configuration locations must consist of one or more comma- or space-delimited
+        fully-qualified @Configuration classes. Fully-qualified packages may also be
+        specified for component-scanning -->
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>com.acme.AppConfig</param-value>
+    </context-param>
+
+    <!-- Bootstrap the root application context as usual using ContextLoaderListener -->
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
+
+    <!-- Declare a Spring MVC DispatcherServlet as usual -->
+    <servlet>
+        <servlet-name>dispatcher</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <!-- Configure DispatcherServlet to use AnnotationConfigWebApplicationContext
+            instead of the default XmlWebApplicationContext -->
+        <init-param>
+            <param-name>contextClass</param-name>
+            <param-value>
+                org.springframework.web.context.support.AnnotationConfigWebApplicationContext
+            </param-value>
+        </init-param>
+        <!-- Again, config locations must consist of one or more comma- or space-delimited
+            and fully-qualified @Configuration classes -->
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>com.acme.web.MvcConfig</param-value>
+        </init-param>
+    </servlet>
+
+    <!-- map all requests for /app/* to the dispatcher servlet -->
+    <servlet-mapping>
+        <servlet-name>dispatcher</servlet-name>
+        <url-pattern>/app/*</url-pattern>
+    </servlet-mapping>
+</web-app>
+```
 
 
 
+### 1.12.3. 使用@Bean
 
 
 
