feat: spring core翻译至1.12.4

--- a/docs/01.文档翻译/01.Spring Framework/01.core.md
+++ b/docs/01.文档翻译/01.Spring Framework/01.core.md
@@ -4015,6 +4015,240 @@ AnnotationConfigApplicationContext的变体WebApplicationContext对于Annotation
 
 ### 1.12.3. 使用@Bean
 
+@Bean是一种方法级注解和XML \<bean /\>元素的功能类似。注解支持\<bean /\>提供的一些属性，例如：* init-method * destroy-method * autowiring * 。
+
+你可以在 @Configuration注解的类中或 @Component注解的类中使用@Bean注释。
+
+**声明bean**
+
+要声明bean，您可以通过@Bean注解一种方法。你可以使用此方法在指定为方法返回值的类型的ApplicationContext中注册Bean定义。默认情况下，Bean名称与方法名称相同。以下示例显示了@Bean方法声明：
+
+```java
+@Configuration
+public class AppConfig {
+
+    @Bean
+    public TransferServiceImpl transferService() {
+        return new TransferServiceImpl();
+    }
+}
+```
+
+前面的配置完全等同于以下Spring XML：
+
+```xml
+<beans>
+    <bean id="transferService" class="com.acme.TransferServiceImpl"/>
+</beans>
+```
+
+这两种声明都使一个名为transferService的bean在ApplicationContext中可用，绑定到类型TransferServiceImpl的对象实例，如下文本所示：
+
+```tex
+transferService -> com.acme.TransferServiceImpl
+```
+
+您还可以使用接口（或基类）返回类型声明@Bean方法，如下示例显示：
+
+```java
+@Configuration
+public class AppConfig {
+
+    @Bean
+    public TransferService transferService() {
+        return new TransferServiceImpl();
+    }
+}
+```
+
+但是，这限制了对指定接口类型（TransferService）的预先类型预测的可见性。然后，只有一次容器已知的全型（TransferServiceImpl），受影响的单例bean已经实例化了。非延迟单例bean据其声明顺序实例化，因此，您可能会看到其他类型的匹配结果，具体取决于另一个组件试图通过非声明类型匹配（例如@Autowired  TransferServiceImpl，仅在transferService已被实例化后解析）。
+
+> :bulb:如果您通过声明的service接口始终指代您的类型，@Bean返回类型则可以安全地加入该设计决策。但是，对于实现多个接口或可能引用其实现类型的组件，声明可能的最特定的返回类型（至少按照指向您的bean的注入点所需的特定程度尽可能更具体）是更安全的。
+
+**Bean依赖**
+
+@Bean注解方法可以具有描述构建该bean所需的依赖项的任意数量的参数。例如，如果我们的TransferService需要AccountRepository，我们可以使用方法参数实现该依赖引入，如以下示例所示：
+
+```java
+@Configuration
+public class AppConfig {
+
+    @Bean
+    public TransferService transferService(AccountRepository accountRepository) {
+        return new TransferServiceImpl(accountRepository);
+    }
+}
+```
+
+这种解决机制与基于构造函数的依赖注入几乎相同。
+
+**接收生命周期回调**
+
+使用@Bean注解定义的任何类都支持常规生命周期回调，并且可以使用JSR-250的@PostConstruct和@PreDestroy注解。有关更多详细信息，请参见[JSR-250注解](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#beans-postconstruct-and-predestroy-annotations)。
+
+常规的spring生命周期回调也得到了充分的支持。如果Bean实现InitializingBean，DisposableBean或Lifecycle，则容器将调用它们的各自方法。
+
+还支持标准的\*Aware接口（例如 [BeanFactoryAware](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#beans-beanfactory), [BeanNameAware](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#beans-factory-aware), [MessageSourceAware](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#context-functionality-messagesource), [ApplicationContextAware](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#beans-factory-aware)等）。
+
+@Bean支持指定任意初始化和销毁回调方法，就像Spring XML的init-method和bean元素上的destroy-method一样，如下示例显示：
+
+```java
+public class BeanOne {
+
+    public void init() {
+        // initialization logic
+    }
+}
+
+public class BeanTwo {
+
+    public void cleanup() {
+        // destruction logic
+    }
+}
+
+@Configuration
+public class AppConfig {
+
+    @Bean(initMethod = "init")
+    public BeanOne beanOne() {
+        return new BeanOne();
+    }
+
+    @Bean(destroyMethod = "cleanup")
+    public BeanTwo beanTwo() {
+        return new BeanTwo();
+    }
+}
+```
+
+
+
+> :information_source:默认情况下，使用Java配置的bean有销毁回调的public的close或shutdown方法。如果您有public的close或shutdown方法，并且当容器关闭时不希望将其调用，则可以将@Bean（destroyMethod=“”）添加到您的bean定义中以禁用默认（推断）模式。
+>
+> 默认情况下，您可能需要对使用JNDI获取的资源来执行此操作，因为其生命周期在应用程序之外进行了管理。特别是，请确保始终为数据源执行此操作，因为已知在Java EE应用程序服务器上存在问题。
+>
+> 以下示例显示了如何防止调用数据源的自动销毁回调：
+>
+> ```java
+> @Bean(destroyMethod="")
+> public DataSource dataSource() throws NamingException {
+>     return (DataSource) jndiTemplate.lookup("MyDS");
+> }
+> ```
+>
+> 另外，使用@Bean，通常使用程序化JNDI 查找，或spring的JndiTemplate或JndiLocatorDelegate helpers或直接使用jndi的InitialContext，而不是JndiObjectFactoryBeanvariant变体（这将强迫您将返回类型声明为FactoryBean类型而不是实际的目标类型，使其更难用于其他@Bean方法中的交叉引用调用）。
+
+在上面的BeanOne示例中，直接在构造过程中调用init（）方法同样有效，如以下示例所示：
+
+```java
+@Configuration
+public class AppConfig {
+
+    @Bean
+    public BeanOne beanOne() {
+        BeanOne beanOne = new BeanOne();
+        beanOne.init();
+        return beanOne;
+    }
+
+    // ...
+}
+```
+
+> :bulb:当您直接使用Java，您可以使用对象做任何喜欢的事情，并且不必总是依靠容器生命周期。
+
+**定义bean作用域**
+
+Spring包括@Scope注解，以便您可以指定Bean的作用域。
+
+您可以指定使用@Bean定义的bean应该具有特定的作用域。您可以使用[Bean Scopes](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#beans-factory-scopes)部分中指定的任何标准作用域。
+
+默认作用域是Singleton，但是您可以用@Scope覆盖它，如以下示例所示：
+
+```java
+@Configuration
+public class MyConfiguration {
+
+    @Bean
+    @Scope("prototype")
+    public Encryptor encryptor() {
+        // ...
+    }
+}
+```
+
+Spring提供了一种方便的方式，可以通过 [scoped proxies](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#beans-factory-scopes-other-injection)解决作用域依赖。使用XML配置时创建这样的代理的最简单方法是\<aop:scoped-proxy/\>元素。@Scope提供了proxyMode属性支持。默认值是不代理（ScopedProxyMode.NO），但是您可以指定ScopedProxyMode.TARGET_CLASS或ScopedProxyMode.INTERFACES。
+
+如果您使用Java将作用域代理示例移植到我们的@Bean中，则类似于以下：
+
+```java
+// an HTTP Session-scoped bean exposed as a proxy
+@Bean
+@SessionScope
+public UserPreferences userPreferences() {
+    return new UserPreferences();
+}
+
+@Bean
+public Service userService() {
+    UserService service = new SimpleUserService();
+    // a reference to the proxied userPreferences bean
+    service.setUserPreferences(userPreferences());
+    return service;
+}
+```
+
+**自定义bean名**
+
+默认情况下，配置类使用@Bean方法的名称作为所得bean的名称。但是，可以用名称属性覆盖此功能，如下示例显示：
+
+```java
+@Configuration
+public class AppConfig {
+
+    @Bean(name = "myThing")
+    public Thing thing() {
+        return new Thing();
+    }
+}
+```
+
+**bean别名**
+
+有时希望给出一个bean多个名称，也称为bean别名。@Bean的name属性接受字符串数组。以下示例显示了如何为bean设置许多别名：
+
+```java
+@Configuration
+public class AppConfig {
+
+    @Bean({"dataSource", "subsystemA-dataSource", "subsystemB-dataSource"})
+    public DataSource dataSource() {
+        // instantiate, configure and return DataSource bean...
+    }
+}
+```
+
+**bean描述**
+
+有时，提供更详细的bean的文本描述是有用的。当bean被暴露（也许是通过JMX）以进行监视时，这可能特别有用。
+
+要将描述添加到@Bean中，您可以使用[`@Description`](https://docs.spring.io/spring-framework/docs/5.3.2/javadoc-api/org/springframework/context/annotation/Description.html)，如下示例显示：
+
+```java
+@Configuration
+public class AppConfig {
+
+    @Bean
+    @Description("Provides a basic example of a bean")
+    public Thing thing() {
+        return new Thing();
+    }
+}
+```
+
+### 1.12.4. 使用@`Configuration` 
+
 
 
 
