--- a/docs/01.文档翻译/01.Spring Framework/01.core.md
+++ b/docs/01.文档翻译/01.Spring Framework/01.core.md
@@ -4249,6 +4249,117 @@ public class AppConfig {
 
 ### 1.12.4. 使用@`Configuration` 
 
+@Configuration是一个类级注解，指示对象是bean定义的源。@Configuration类通过公共@Bean方法声明bean。@Configuration类上@Bean方法的调用也可以用于定义bean相互依赖。请参阅基本概念：[@bean和@configuration有关基础介绍]([Basic Concepts: `@Bean` and `@Configuration`](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#beans-java-basic-concepts))。
+
+**注入相互bean依赖**
+
+当bean彼此依赖时，表达依赖性就像让一个bean方法调用另一个一样简单，如以下示例所示：
+
+```java
+@Configuration
+public class AppConfig {
+
+    @Bean
+    public BeanOne beanOne() {
+        return new BeanOne(beanTwo());
+    }
+
+    @Bean
+    public BeanTwo beanTwo() {
+        return new BeanTwo();
+    }
+}
+```
+
+在前面的示例中，beanOne通过构造器注入对beanTwo的引用。
+
+> :information_source:bean相互依赖的方法仅在@Configuration类中中声明@Bean时才适用。您无法使用纯@Component声明Bean相互依赖。
+
+**查找方法注入**
+
+如前所述，查找方法注入是您应该很少使用的高级功能。在单例Bean具有对原型bean的依赖的情况下是有用的。使用Java进行此类配置提供了一种自然的手段来实现此模式。以下示例显示了如何使用查找方法注入：
+
+```java
+public abstract class CommandManager {
+    public Object process(Object commandState) {
+        // grab a new instance of the appropriate Command interface
+        Command command = createCommand();
+        // set the state on the (hopefully brand new) Command instance
+        command.setState(commandState);
+        return command.execute();
+    }
+
+    // okay... but where is the implementation of this method?
+    protected abstract Command createCommand();
+}
+```
+
+通过使用Java配置，您可以创建一个CommandManager的子类，其中抽象createCommand（）方法被覆盖以查找新（prototype）command 对象的方式。以下示例显示了如何执行此操作：
+
+```java
+@Bean
+@Scope("prototype")
+public AsyncCommand asyncCommand() {
+    AsyncCommand command = new AsyncCommand();
+    // inject dependencies here as required
+    return command;
+}
+
+@Bean
+public CommandManager commandManager() {
+    // return new anonymous implementation of CommandManager with createCommand()
+    // overridden to return a new prototype Command object
+    return new CommandManager() {
+        protected Command createCommand() {
+            return asyncCommand();
+        }
+    }
+}
+```
+
+**有关基于Java的配置如何在内部工作的更多信息**
+
+考虑以下示例，该示例展示了被调用两次的@Bean方法：
+
+```java
+@Configuration
+public class AppConfig {
+
+    @Bean
+    public ClientService clientService1() {
+        ClientServiceImpl clientService = new ClientServiceImpl();
+        clientService.setClientDao(clientDao());
+        return clientService;
+    }
+
+    @Bean
+    public ClientService clientService2() {
+        ClientServiceImpl clientService = new ClientServiceImpl();
+        clientService.setClientDao(clientDao());
+        return clientService;
+    }
+
+    @Bean
+    public ClientDao clientDao() {
+        return new ClientDaoImpl();
+    }
+}
+```
+
+clientDao()已在clientService1()中和clientService2()中各调用一次。由于此方法创建了一个新的ClientDaoImpl实例并返回它，因此您通常会期望有两个实例（每个服务一个）。这绝对是有问题的：在Spring中，默认情况下，实例化的bean是单例的。这是魔法进入的地方：所有@Configuration类启动时都在CGLIB作用下子类化。在子类中，子方法在它调用父方法并创建新实例之前首先检查容器是否存在任何缓存（范围）bean。
+
+> :information_source:根据bean的作用域，这种行为可能不同。我们在这里谈论的是单例。
+
+> :information_source:从Spring 3.2开始，不再需要在您的类路径中添加CGLIB，因为CGLIB类已在org.springframework.cglib下重新打包，并直接包含在Spring-Core Jar中。
+
+> :bulb:由于CGLIB在启动时动态添加功能，因此有一些限制。特别是，配置类不能是final。但是，从4.3起，配置类上允许任何构造函数，包括使用@Autowired或单个非默认构造函数声明以默认注入。
+>
+> 如果您希望避免使用任何CGLIB施加的限制，请考虑在非@Configuration类上声明@Bean方法（例如，在@Component类上）。然后不会拦截@Bean方法之间的交叉方法调用，因此您必须仅依赖于构造函数或方法级别的依赖项注入。
+
+### 1.12.5. 编排基于Java的配置
+
+
+
 
 
 
